syntax = "proto3";

option go_package = "emulator/proto/ours/abci/minibank";

package ours.abci.minibank;

import "proto/third_party/timestamp.proto";
import "proto/crypto/merkle/proof.proto";

message TransferTx {
    repeated string from = 1;
    repeated string to = 2;
    repeated uint32 from_money = 3;
    repeated uint32 to_money = 4;
    bytes    buffer = 5;
    google.protobuf.Timestamp Time = 6;
}

message InsertTx {
    string account = 1;
    uint32 money = 2;
    bytes  buffer= 3;
    google.protobuf.Timestamp Time = 4;
}

message RelayTransferTx {
    string last_chain_id = 1;
    int64 height = 2;
    TransferTx tx = 3;
    int32 total = 4;
    int32 now = 5;
    crypto.merkle.Proof proof = 6;
}

message BankData {
    repeated string keys = 1;
    bool o_k = 2;
    repeated uint32 values = 3;
}