syntax = "proto3";

option go_package = "emulator/proto/pyramid/types";

package pyramid.types;

message ABCIExecutionReceipt {
    int32 code = 1;
    string log = 2;
    string info = 3;
    map<string,string> options = 4;
}

